# Ark

./: .gitignore  .lbb  @  Alright, to do:  GRATITUDE.md  LICENSE  Makefile  README  README.md  acom  acom.c  alphabet  anet.h  aprobe.h.in  arc  ark  ather  ather.c  athernet  athernet.c  att.h.in  auth.c  backup.configure.ac  call.h  common.h  coms.c  d-prg  drm.h  file_stat  flask_runner  git_log  iota.h  kurl  kurl.c  kurl~HEAD  ldisplay.h.in  lenk.h.in  levels.c  log.h  main.c  (+23 more)
.@/: README.md  temp.c
.@/k512/: ARK  ARK_INC  README.md  _512.h  __karch__  ark.init  standard.h  utypes.h
.@/mods/: Ark-syntax.yaml  INSTALL.md  alphabet.py  base.py  run_flask.py  wrapper.sh
.@/run/: morles
.@/source/: api.d  arc.c  arc.c.backup  att.c  d_atp.c  d_cld.c  d_lbb.c  d_prg.c  d_pts.c  dcloud.c  dclouds.c  fields.c  flds.c  i_fields.c  k512.c  runlbb.c  udef.c  utypes.h
.@/ter/: mach
.@/tests/: api.d
0xa/: Makefile
0xa/node/: __main__  node_config.py
0xa/scripts/: alph_charms.py  fake_aether_cache.py  gpy3
@/: fld  ter
@charms/: .address  .charm
@charms/headers/: hbar.h  lbb.h  standard.h
@source/: anet.h  ather  ather.c  ather.h  athernet.c  kurl.c  main.c  misc.c  probe.h
@source/entry/: entry.h  main.c
@source/hbar/: hbar.c  hbar.h  main.c
@source/k512/: ARK  _512.h  utypes.h
@source/kurl/: __k.h  hat.h  kurl.c  kurl.h  the_0kurl.c  the_2kurl.h
@source/lbb/: lbb.c  lbb.h  main.c
@source/mods/: Ark-syntax.yaml  base.py  change_author.sh  py_wrapper.sh
@source/morles/: protocol.h
@source/nai/: nai.c  nai.h
@source/point/: main.c  point.c  point.h
@source/sexec/: socket_executive.h
@source/yx/: yx.h
Bond/: IAetherBonds.sol
Factory/: AetherFactory.sol
HUB/: V2AetherHub.sol
Node/: AetherNode.sol
Package/: aether-build-deps_1.0_all.deb  aether-build-deps_1.0_amd64.buildinfo  aether_1.0.tar.xz  aether_1.0_amd64.build  aether_1.0_amd64.deb
Router/: AetherRouter.sol
Source/: Makefile
Source/share/: alph_kmem  (+3 more)
alph/: ccc.c.in  enk.h.in  hbar.h.in
arc.d/: d-cloud  d-points  d-program
balance/: Makefile
charms/: .att  .usr
connc/: connc.h
dev/: Makefile
entries/: comms.c
hbar/: hbar.c  hbar.h
helpers/: helpers.h
include/: anet.h  probe.h
json/: json.h
k/: sexec.h
k512/: ARK  _512.h  __karch__  darc  karch.h  tests  utypes.h
key/: levels.c
kurl/: the_0kurl.h
lbb/: lbb.c  lbb.h  little_black_book.h
misc/: darc.sublime-syntax
morles/: amirrors.c  les.h  mor.h  protocol.h
osys/: general  lbb.sh  sync.lbb
parser/: parser.h
point/: main.c  pipes.h  point.h
pub/: alph_kmem  athernet  kurl  misc
scripts/: app.py  ather-configurator  hash1.py  socks.py  vik_contracts.sh
sexec/: asockets.c  main.c  sockets.h
shared/: indexer  license
source/: d_atp.c  d_cld.c  d_lbb.c  d_prg.c
src_d/: atp.d  cld.d  pts.d
src_in/: cctypes.h.in  dexplore.c.in  dexplore.h.in  formating.c.in  formatting.h.in  lbb.h.in  ldisplay.h.in  lenk.c.in  lenk.h.in  points.h.in  probe.h.in
src_src/: athernet.c  misc.c  probe.h
tests/: ather-evm.sh  fmt_test  hardhat.config.ts  helpers.h  package-lock.json
update/: self.sh
zen/: Makefile
zen0x/: Makefile  configure.ac
zen0x/active/: zen2K
zen0x/dev/: enk.h  hash8.c  hbar.c  idxer.h  lbb.c  records.h  utypes.h  zfiles.c
zen0x/dev/net/: les.c  morles.c
zen0x/net/: Makefile
zen0x/net/shared/: hbar.c  hbar.h  utypes.h
zen0x/net/sourcer/: README.md  config_reader.h  main.c
(+1538 files in other folders)
